Bug 167688 - Simple menu crash on a assert and make plasma to crash
Summary: Simple menu crash on a assert and make plasma to crash
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 165484 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-29 23:27 UTC by Nicolas L.
Modified: 2008-11-30 20:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Full backtrace of plasma crash (25.80 KB, text/plain)
2008-09-01 21:59 UTC, Helio Chissini de Castro
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas L. 2008-07-29 23:27:00 UTC
Version:            (using KDE 4.1.0)
Installed from:    Mandriva RPMs

randomly, when searching desktop files on the menu, simpleapplet menu crash with plasma again in konsole i obtain ( when i start plasma thanks to plasma& )

ASSERT: "menuIndex.isValid()" in file /home/mandrake/rpm/BUILD/kdebase-workspace-4.1.0/plasma/applets/kickoff/simpleapplet/menuview.cpp, line 361
Comment 1 Sebastian Sauer 2008-07-31 04:49:29 UTC
*** Bug 165484 has been marked as a duplicate of this bug. ***
Comment 2 Sebastian Sauer 2008-08-01 03:17:21 UTC
fix committed in trunk with r840393. I'll backport once tested more detailed.
Comment 3 Nicolas L. 2008-08-01 08:00:55 UTC
i just backported this patch on mandriva cooker,  i will tell you if we have some feedbacks

Btw, thanks for the fix :)
Comment 4 Sebastian Sauer 2008-08-02 03:59:37 UTC
Fixed with r840866 and the fix will be part of 4.1.1 - see also bug #167620

heh, Nicolas. Guess this time either you was a bit to fast or me to slow ;) Anyway, thank you once more!
Comment 5 Sebastian Sauer 2008-08-02 03:59:56 UTC
*** Bug has been marked as fixed ***.
Comment 6 Sebastian Sauer 2008-08-02 04:31:58 UTC
r840866 AND r840872 actually (2 commits).
Comment 7 Helio Chissini de Castro 2008-09-01 21:58:21 UTC
4.1.1 final tarballs still have severe crashes in this subject. Attaching full backtrace.
Comment 8 Helio Chissini de Castro 2008-09-01 21:59:43 UTC
Created attachment 27178 [details]
Full backtrace of plasma crash
Comment 9 Sebastian Sauer 2008-09-03 06:13:06 UTC
uh, cause it seems it's crashing on setModel on trying to free something, it's clearly a regression of r853529 (4.1) and r853524 (trunk). Yay, not that I didn't sayed that it's a bad idea to work around Qt bugs (bug #166847 ).

I guess we will have to either fix tons of new problems now or just revert the both commits...
Comment 10 Sebastian Sauer 2008-09-03 06:26:29 UTC
Also, for the case the patch from bug #166481 got applied, I would suggest to revert that one too since it may lead to crashes with the changes done at r853529 too :-/
Comment 11 Sebastian Sauer 2008-11-30 17:03:59 UTC
Is this still reproducable?
Comment 12 Nicolas L. 2008-11-30 20:42:49 UTC
this one seems OK now, i will reopen it if it comes back