backport r840393, r840396, r840399, r840842 and r840844 Fixes crash-cases, strange/wrong cycles and let's the classic menu update itself on changes.

BUG:167688
BUG:167620


svn path=/branches/KDE/4.1/kdebase/workspace/; revision=840866